@startuml SUGARFACTORY

class RegistrationController{
    
    index()
    store(RegistrationRequest $request)
}

class AuthController{

    index()
    login(AuthRequest $request)
    logout()
}

class User{
    protected $fillable = []
    protected $hidden = []
    protected $casts = []

    setPasswordAttribute($password)
    company()
    routeNotificationForTelegram()
}

class Company{
    protected $table
    protected $guarded
}

class CabinetController{

    private $ordersService

    __construct(OrdersService $ordersService)
    index()
}

class GoodController{

    private $goodsService

    __construct(GoodsService $goodsService)
    index()
    show($id)
    goodForOrder(Request $request)
}

class GoodsService{

    encodeImages(&$goods)
    getId($value)
}

class Good{
    protected $table
    protected $guarded

    packs()
    order()
}

class Pack{
    protected $table
    protected $guarded

    good()
    order()
}

class OrderController{
    private $ordersService

    __construct(OrdersService $ordersService)
    store(Request $request)
    updateStatus($statusData)
}

class OrdersService{
    private const CHAT_ID
    private const TOKEN

    parsePack($item)
    makeOrdersList($role, $param)
    sort(&$orders, $param)
    telegram($order)
    sendMessage($messaggio)
    createMessage($order)
}

class Order{
    protected $table
    protected $guarded

    good()
    pack()
}

class ReviewController{
    private $reviewsService

    __construct(ReviewsService $reviewsService)
    create($goodId)
    store(Request $request)
}

class Review{
    protected $table
    protected $guarded

    good()
    company()
}

class ReviewsService{
    makeReviewObjectRecord(&$reviewData)
}

OrderController o-- OrdersService
GoodController o-- GoodsService
ReviewController o-- ReviewsService
CabinetController o-- OrdersService
Order *-- OrderController
Good *-- GoodController
Review *-- ReviewController
GoodsService *-- Good
OrdersService *-- Order
OrdersService *-- Pack
OrdersService *-- User
ReviewsService *-- User
Good <-- Pack
Good <-- Order
Company <-- User
AuthController o-- User
RegistrationController *-- User

@enduml